--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="java, portfolio">
+<meta name="description" content="Dominika Smorąg - portfolio">
     <link rel="stylesheet" href="styles.css">
     <title>Dominika Smorąg</title>
 </head>
