project source update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Console application intended for assigning tags to files in order to make them easier to find.</p>
         </a>
 		
-        <a href="https://github.com/dominikasmorag/real-estate-archive" class="project-tile">
+        <a href="https://github.com/dominikasmorag/real-estate-archive-v2.0" class="project-tile">
             <h2>Real-estate archive</h2>
             <p>Simple apartments announcements archiver utilizing JSoup library, JDBC, and H2 database.</p>
         </a>
